2009-04-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Added patch from Levi Bard
	  <taktaktaktaktaktaktaktaktaktak@gmail.com>: Perform initial
	  parse asynchronously.


2009-04-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  Made the 'undo' of code completion operations more
	  intelligent.

2009-04-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Fixed error
	  in resolve command.

2009-04-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Fixed bug in
	  resolve type feature.

2009-04-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs: handled
	  strings in GetLenghtOrCount expansion method.

2009-04-07  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.Gui.Dialogs/RenameItemDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.RenameItemDialog.cs:
	  implemented Bug 414735 - Rename refactoring should not allow
	  invalid names

	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs: 

2009-04-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Commands/TextEditorCommands.cs: Implemented
	  "Bug 492675 - New line & ; at end of line".

2009-04-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Commands/TextEditorCommands.cs: Added
	  ctrl+return/shift+return commands.

2009-04-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs:
	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Change the
	  platform service method for installing the global menu so
	  that it uses a command path instead of a GTK menu.

2009-04-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Added
	  "resolve namespace" feature.

2009-03-27  Mike Krüger  <mkrueger@novell.com>
