@@ -123,8 +123,8 @@ namespace MonoDevelop.Ide.Templates
 				if (netProject != null) {
 					// Add required references
 					foreach (string aref in references) {
-						string res = Runtime.SystemAssemblyService.GetAssemblyFullName (aref);
-						res = Runtime.SystemAssemblyService.GetAssemblyNameForVersion (res, netProject.TargetFramework);
+						string res = netProject.TargetRuntime.GetAssemblyFullName (aref);
+						res = netProject.TargetRuntime.GetAssemblyNameForVersion (res, netProject.TargetFramework);
 						if (!ContainsReference (netProject, res))
 							netProject.References.Add (new ProjectReference (ReferenceType.Gac, aref));
 					}
